--- a/blocks/section__single-post__intro/_index.scss
+++ b/blocks/section__single-post__intro/_index.scss
@@ -85,7 +85,7 @@
 
     display: flex;
     flex-direction: row;
-    padding: 0.5rem 0px;
+    padding: 0.2rem 0px;
     width: fit-content;
     position: relative;
     width: 100%;
@@ -94,7 +94,7 @@
     opacity: 1;
 
     * {
-        font-size: var(--font-size-0);
+        font-size: var(--font-size--1);
     }
 }
 
@@ -157,11 +157,11 @@
 }
 
 .section__single-post__meta__team__name {
-    font-size: var(--font-size-0);
+    font-size: var(--font-size--1);
     color: var(--color-secondary);
 
     * {
-        font-size: var(--font-size-0);
+        font-size: var(--font-size--1);
         color: var(--color-secondary);
     }
 
