--- a/components/footer/footer.scss
+++ b/components/footer/footer.scss
@@ -42,14 +42,14 @@
 }
 
 .footer__content {
-    grid-column: 4/13;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     flex-wrap: wrap;
     gap: 3rem;
     position: relative;
     height: 100%;
     justify-content: space-between;
+    align-items: flex-end;
 }
 
 .footer__links__wrapper {
@@ -57,7 +57,7 @@
     flex-direction: column;
     justify-content: space-between;
     z-index: 15;
-    gap: 2rem;
+    gap: 1rem;
 }
 
 .footer__links {
@@ -65,7 +65,6 @@
     flex-direction: row;
     gap: 1rem;
     row-gap: .7rem;
-    grid-row: 1 / 2;
     width: -moz-fit-content;
     width: fit-content;
     flex-wrap: wrap;
@@ -76,7 +75,8 @@
 
     * {
         text-decoration: none;
-        font-size: var(--font-size-0);
+        font-size: var(--font-size--1);
+        font-weight: 400;
         // color: var(--color-white);
     }
 
@@ -89,30 +89,36 @@
     align-items: flex-start;
 }
 
+.footer__caption {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
 
+    * {
+        font-size: var(--font-size--1);
+        font-weight: 400;
+        color: var(--color-text-grey);
+    }
+}
 
 @media screen and (max-width: 1600px) {
 
-    .footer__content {
-        grid-column: 3/13;
-    }
 }
 
 @media screen and (max-width: 1220px) {
 
-
-    .footer__content {
-        grid-column: 2/13;
-    }
 }
 
 @media screen and (max-width: 767px) {
     .footer {
         padding-top: 0;
+        padding-bottom: 2rem;
     }
-
-    .footer__content {
-        // grid-row: 3/4;
-        grid-column: 1/13;
+    .footer__content{
+        flex-direction: column;
+        align-items: flex-start;
+    }
+    .footer__caption{
+        align-items: flex-start;
     }
 }
