--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -198,7 +198,7 @@ header {
     content: "";
     position: absolute;
     left: 0;
-    bottom: 6px;
+    bottom: 5.5px;
     background: white;
     transition: bottom 200ms 200ms cubic-bezier(0.23, 1, 0.32, 1), transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
 }
@@ -337,4 +337,25 @@ header {
     }
 
 
+}
+
+@keyframes slideInFromTop {
+    from {
+        transform: translateY(-40px);
+        opacity: 0;
+    }
+
+    to {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+.slide-in-text {
+    animation: slideInFromTop 1s ease forwards;
+    opacity: 0;
+}
+
+.header__burger__menu._open .header__burger__links li a {
+    opacity: 0;
 }
