--- a/blocks/experience/_index.scss
+++ b/blocks/experience/_index.scss
@@ -41,7 +41,7 @@
     flex-direction: column;
     width: 100%;
     display: grid;
-    grid-template-columns: 22.5% 25% 49% ;
+    grid-template-columns: 22.5% 49%;
     padding-bottom: 3rem;
     gap: 1rem;
 }
@@ -53,7 +53,8 @@
     grid-column: 1/2;
     grid-row: 1/2;
 }
-.experience-item:has(.experience-item__img){
+
+.experience-item:has(.experience-item__img) {
     .experience-item__title-content {
         margin-left: 1rem;
     }
@@ -98,12 +99,12 @@
 .experience-item__content {
     width: 100%;
     position: relative;
-    grid-column: 3/4;
-    grid-row: 1/2;
+    // grid-column: 3/4;
+    // grid-row: 1/2;
 }
 
 .experience-item__year {
-    font-size: var(--font-size-0);
+    font-size: var(--font-size--1);
     font-weight: var(--font-weight-regular);
 
     margin-top: .3rem;
@@ -111,7 +112,7 @@
 
     // grid-column: 2 / 3;
     // grid-row: 1 / 1;
-    margin-top: .4rem;
+    margin-top: .1rem;
 
 }
 
@@ -119,7 +120,9 @@
     font-size: var(--font-size-0);
     font-weight: var(--font-weight-regular);
     color: var(--color-text-grey);
-    *{
+    margin-top: .3rem;
+
+    * {
         font-size: var(--font-size-0);
         font-weight: var(--font-weight-regular);
         color: var(--color-text-grey);
@@ -144,11 +147,10 @@
         flex-direction: column;
         gap: 1.2rem;
     }
-    .experience-item__content{
-margin-top: -.8rem;
+
+    .experience-item__content {
+        margin-top: 0;
     }
 }
 
-@media screen and (max-width: 480px) {
- 
-}
+@media screen and (max-width: 480px) {}
