--- a/components/footer/footer.scss
+++ b/components/footer/footer.scss
@@ -57,7 +57,7 @@
     flex-direction: column;
     justify-content: space-between;
     z-index: 15;
-    gap: 1rem;
+    gap: 1.5rem;
 }
 
 .footer__links {
@@ -75,7 +75,7 @@
 
     * {
         text-decoration: none;
-        font-size: var(--font-size--1);
+        font-size: var(--font-size-0);
         font-weight: 400;
         // color: var(--color-white);
     }
@@ -91,8 +91,9 @@
 
 .footer__caption {
     display: flex;
-    flex-direction: column;
+    flex-direction: row-reverse;
     align-items: flex-end;
+    gap: 1rem;
 
     * {
         font-size: var(--font-size--1);
@@ -101,24 +102,22 @@
     }
 }
 
-@media screen and (max-width: 1600px) {
+@media screen and (max-width: 1600px) {}
 
-}
-
-@media screen and (max-width: 1220px) {
-
-}
+@media screen and (max-width: 1220px) {}
 
 @media screen and (max-width: 767px) {
     .footer {
         padding-top: 0;
         padding-bottom: 2rem;
     }
-    .footer__content{
+
+    .footer__content {
         flex-direction: column;
         align-items: flex-start;
     }
-    .footer__caption{
+
+    .footer__caption {
         align-items: flex-start;
     }
 }
