--- a/blocks/contacts/_index.scss
+++ b/blocks/contacts/_index.scss
@@ -2,6 +2,8 @@
     display: flex;
     flex-direction: row;
     padding-bottom: 0;
+    justify-content: space-between;
+    gap: 1rem;
 }
 
 .contacts-block__content {
@@ -9,8 +11,7 @@
     flex-direction: column;
     gap: .5rem;
 
-    width: 50%;
-    padding-right: 15%;
+    width: 42rem;
 }
 
 .contacts-block__description {
