--- a/components/post-card/post-card__big/post-card__big.scss
+++ b/components/post-card/post-card__big/post-card__big.scss
@@ -25,7 +25,7 @@
     display: flex;
     flex-direction: column;
     gap: 5rem;
-    width: 30%;
+    width: 42rem;
 }
 
 .post-card__big__content {
