--- a/blocks/post__navigation/_index.scss
+++ b/blocks/post__navigation/_index.scss
@@ -1,15 +1,17 @@
 .post__navigation {
     padding: 1.5rem var(--padding);
     position: sticky;
-    left: var(--padding);
+    left: auto;
+    right: var(--padding);
     top: 5rem;
     bottom: 0;
     height: -moz-fit-content;
     height: fit-content;
-    width: 209px;
+    // width: 12.5%;
     display: flex;
     flex-direction: column;
     padding: 0;
+    margin: 0 0 0 auto;
 
     &::before {
         content: '';
@@ -103,7 +105,7 @@
     color: var(--color-text-primary);
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 780px) {
     .post__navigation {
         flex-direction: row;
         width: 100%;
