--- a/components/post-card/post-card__big/post-card__big.scss
+++ b/components/post-card/post-card__big/post-card__big.scss
@@ -477,6 +477,7 @@
     .post-card__big__gallery__img {
         width: 100%;
         height: 100%;
+        border: none;
     }
 
     .slide__video-video__source {
