--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -66,7 +66,7 @@ header {
     gap: 5rem;
     // width: fit-content;
     // width: calc(100% - 180px - 20.9rem);
-    width: 50%;
+    width: calc(50% - var(--padding));
     position: fixed;
     right: var(--padding);
     transition: all .3s ease;
@@ -298,8 +298,7 @@ header {
 
 }
 
-@media screen and (max-width: 1600px) {
-}
+@media screen and (max-width: 1600px) {}
 
 @media screen and (max-width: 1220px) {
 
@@ -314,15 +313,23 @@ header {
     .header__top {
         padding: 1.5rem var(--padding);
     }
-    .header__navigation{
-        &._main{
+
+    .header__navigation {
+        &._main {
             display: none;
         }
     }
-    .header__top__right{
+
+
+    .header__top__right {
         width: fit-content;
+
+        &.out {
+            transform: translateY(-190%);
+        }
     }
-    .header__column{
+
+    .header__column {
         gap: 1rem;
     }
 }
