--- a/components/post-card/post-card__big/post-card__big.scss
+++ b/components/post-card/post-card__big/post-card__big.scss
@@ -380,7 +380,7 @@
         &._cover {
             position: relative;
             // top: 0;
-
+            padding: 0;
             &._cover {
                 // mask: linear-gradient(260deg, rgba(0, 0, 0, 0) 10.41138795045045%, rgba(0, 0, 0, 1) 93.1447072072072%) add;
 
