--- a/components/post-card/post-card__big/post-card__big.scss
+++ b/components/post-card/post-card__big/post-card__big.scss
@@ -47,7 +47,7 @@
     width: 100%;
     height: 100%;
     align-items: flex-start;
-
+    max-width: 42rem;
     * {
         color: var(--color-text-primary);
     }
