--- a/blocks/contacts/_index.scss
+++ b/blocks/contacts/_index.scss
@@ -3,7 +3,7 @@
     flex-direction: row;
     padding-bottom: 0;
     justify-content: space-between;
-    gap: 1rem;
+    gap: var(--gap);
 }
 
 .contacts-block__content {
@@ -11,7 +11,8 @@
     flex-direction: column;
     gap: .5rem;
 
-    width: 42rem;
+    width: 50%;
+    max-width: 42rem;
 }
 
 .contacts-block__description {
