--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -96,7 +96,6 @@ header {
     top: 0;
     margin: 0 auto;
 
-    background-color: var(--color-red);
     transition: all .5s;
     z-index: 80;
     overflow-y: auto;
@@ -107,16 +106,33 @@ header {
     visibility: hidden;
     width: 0;
     text-wrap: nowrap;
+    color: var(--color-primary);
+    mix-blend-mode: difference;
 
-    * {
-        color: var(--color-white);
+    .header__burger__menu-background {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-color: var(--color-red);
+
     }
 
+    // * {
+    //     color: var(--color-white);
+    // }
+.header__burger__menu-list{
+
+    *{
+     color: var(--color-primary);
+     mix-blend-mode: difference;
+    }
+}
     .header__burger__links {
         display: flex;
         flex-direction: column;
         width: 100%;
-
         a {
             // transform: translateY(-100%);
             border-bottom: 0;
@@ -128,10 +144,9 @@ header {
             // font-weight: var(--font-weight-regular);
             font-weight: var(--font-weight-medium);
             transition: all .1s;
-
             &:hover {
                 background-color: #fff;
-                color: #000;
+                // color: #000;
             }
         }
     }
@@ -163,7 +178,7 @@ header {
 
 .header__top__burger {
     position: relative;
-    top: 0;
+    top: -1px;
     left: 0;
     right: 0;
     bottom: 0;
@@ -223,14 +238,10 @@ header {
 }
 
 .header__navigation {
-    // padding: 1.5rem var(--padding);
-    // position: fixed;
-    // bottom: 0;
-    // left: 0;
+    text-transform: lowercase;
 
-    &._contact {
-        text-transform: uppercase;
-    }
+    // &._contact {
+    // }
 }
 
 
@@ -282,7 +293,7 @@ header {
     gap: .5rem;
     padding: 1rem 0;
 
-    
+
 
     a {
         // text-decoration: none;
